--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "Provides access to twitter and gives you the tools to show feeds, searches and hashtags",
     "type": "bolt-extension",
     "require": {
-        "bolt/bolt": ">=2.0.0,<3.0.0",
-        "endroid/twitter": "1.1.3"
+        "bolt/bolt": ">=2.0.0,<3.0.0"
     },
     "license": "MIT",
     "authors": [
@@ -22,8 +21,8 @@
                 "",
                 "src"
             ],
-            "Endroid\\Twitter\\": "lib/endroid/twitter/src",
-            "Buzz\\": "lib/kriswallsmith/buzz/lib"
+            "Endroid\\Twitter\\": "lib/endroid/twitter/src/Endroid/Twitter",
+            "Buzz\\": "lib/kriswallsmith/buzz/lib/Buzz"
         }
     },
     "extra": {
