--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
             "init.php"
         ],
         "psr-4": {
-            "Bolt\\Extension\\Cooperaj\\BoltTwitter\\": [
+            "Bolt\\Extension\\Cooperaj\\Twitter\\": [
                 "",
                 "src"
             ],
