Add branch alias

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,9 @@
         }
     },
     "extra": {
-        "bolt-assets": "assets"
+        "bolt-assets": "assets",
+        "branch-alias" : {
+            "dev-master" : "1.0.*-dev"
+        }
     }
 }
