--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         }
     },
     "extra": {
-        "bolt-assets": "assets",
+        "bolt-assets": "web",
         "bolt-class": "Bolt\\Extension\\Cooperaj\\Twitter\\TwitterExtension"
     }
 }
