--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "social media"
     ],
     "require": {
-        "bolt/bolt": "^3.0"
+        "bolt/bolt": "^3.0",
+        "endroid/twitter": "^1.2"
     },
     "license": "MIT",
     "authors": [
