--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,7 @@
         "social media"
     ],
     "require": {
-        "bolt/bolt": "^3.0",
-        "endroid/twitter": "^1.2"
+        "bolt/bolt": "^3.0"
     },
     "license": "MIT",
     "authors": [
@@ -21,7 +20,9 @@
     "prefer-stable": true,
     "autoload": {
         "psr-4": {
-            "Bolt\\Extension\\Cooperaj\\Twitter\\": "src"
+            "Bolt\\Extension\\Cooperaj\\Twitter\\": "src",
+            "Endroid\\Twitter\\": "lib/endroid/twitter/src",
+            "Buzz\\": "lib/kriswallsmith/buzz/lib/Buzz"
         }
     },
     "extra": {
